--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ justify-content: center;">
 
    <div class="flex">
     <div>
-      <img src="Images/Palaash.jpg" title="TA-1" class="profile-pic" />
+      <img src="Images/Shrey.jpg" title="TA-1" class="profile-pic" />
       <p>Shrey Shah </br><a href="mailto: f20171038@pilani.bits-pilani.ac.in">Contact</a> </p>
     </div>
     <div>
@@ -195,11 +195,11 @@ justify-content: center;">
       <p>Siddharth Awasthi </br><a href="mailto: f20180287@pilani.bits-pilani.ac.in">Contact</a> </p>
     </div>
     <div>
-      <img src="Images/Sidhharth.jpg" title="TA-4" class="profile-pic"/>
+      <img src="Images/Jash_Shah.jpg" title="TA-4" class="profile-pic"/>
       <p>Jash Shah </br><a href="mailto: f20180507@pilani.bits-pilani.ac.in">Contact</a> </p>
     </div>
     <div>
-      <img src="Images/Sidhharth.jpg" title="TA-4" class="profile-pic"/>
+      <img src="Images/Snehil.jpg" title="TA-4" class="profile-pic"/>
       <p>Snehil Gupta </br><a href="mailto: f20180112@pilani.bits-pilani.ac.in">Contact</a> </p>
     </div>
    
@@ -207,11 +207,11 @@ justify-content: center;">
 
 <div class="flex">
   <div>
-    <img src="" title="TA-5" class="profile-pic" />
+    <img src="Images/Sumantrak.png" title="TA-5" class="profile-pic" />
     <p>Sumantrak Mukherjee </br><a href="mailto: f20190413@pilani.bits-pilani.ac.in">Contact</a> </p>
   </div>
   <div>
-    <img src="" title="TA-6" class="profile-pic"/>
+    <img src="Images/Preetika.png" title="TA-6" class="profile-pic"/>
     <p>Preetika Verma </br><a href="mailto: f20190088@pilani.bits-pilani.ac.in">Contact</a> </p>
   </div>
   <div>
@@ -219,7 +219,7 @@ justify-content: center;">
     <p>Devaansh Gupta</br><a href="mailto: f20190187@pilani.bits-pilani.ac.in">Contact</a> </p>
   </div>
   <div>
-    <img src="" title="TA-8" class="profile-pic"/>
+    <img src="Images/Kanishk.jpg" title="TA-8" class="profile-pic"/>
     <p>Kanishk Sharma </br><a href="mailto: f20190230@pilani.bits-pilani.ac.in">Contact</a> </p>
   </div>
   <div>
