--- a/index.html
+++ b/index.html
@@ -161,85 +161,99 @@ justify-content: center;" >
 
 <h2 class="page-title" style="text-align: center;">TAs Team</h2>
 
-<!-- <h3>Head TAs:</h3> -->
-<div style="display: flex;
-justify-content: center;">
+</br>
+</br>
 
-<div class = "container">  
+<!-- <h3>Head TAs:</h3> -->
+<div style="justify-content: center; display: flex;"> 
+
+<div class="flex" >
+  <div>  
   <img src="Images/Achleshwar.jpg" alt="placeholder" class = "profile-pic" title="Head TA-1" height="200" width="200" />
-  <p>Achleshwar Luthra </br>Head TA </br><a href="mailto: f20180401@pilani.bits-pilani.ac.in">Contact</a></p>
+  <div><p>Achleshwar Luthra </br>Head TA </br><a href="mailto: f20180401@pilani.bits-pilani.ac.in">Contact</a></p></div>
   </div>
 
-  <div class="container">
+  <div>
     <img src="Images/Harsh.jpeg" alt="placeholder" class="profile-pic" title="Head TA-2" height="200" width="200" />
-    <p>Harsh Sulakhe </br>Head TA </br><a href="mailto: f20180186@pilani.bits-pilani.ac.in">Contact</a></p>
+    <div style="text-align: center;"><p>Harsh Sulakhe </br>Head TA </br><a href="mailto: f20180186@pilani.bits-pilani.ac.in">Contact</a></p></div>
+  </div>
+  <div>
+    <img src="Images/Shrey.jpg" title="TA-1" class="profile-pic" />
+    <div><p>Shrey Shah </br><a href="mailto: f20171038@pilani.bits-pilani.ac.in">Contact</a> </p></div>
+  </div>
+  <div >
+    <img src="Images/Palaash.jpg" title="TA-2" class="profile-pic"/>
+    <div><p>Palaash Agrawal </br><a href="mailto: f20180565@pilani.bits-pilani.ac.in">Contact</a> </p></div>
+
   </div>
   
 </div>
+</div>
   <!-- <h3>TA Team:</h3> -->
-</br>
-</br>
 
-   <div class="flex">
-    <div>
-      <img src="Images/Shrey.jpg" title="TA-1" class="profile-pic" />
-      <p>Shrey Shah </br><a href="mailto: f20171038@pilani.bits-pilani.ac.in">Contact</a> </p>
-    </div>
-    <div>
-      <img src="Images/Palaash.jpg" title="TA-2" class="profile-pic"/>
-      <p>Palaash Agrawal </br><a href="mailto: f20180565@pilani.bits-pilani.ac.in">Contact</a> </p>
-
-    </div>
+   
+  <div style = "justify-content: center; display: flex;">
+  <div class="flex">
+    
+    
     <div>
       <img src="Images/Sidhharth.jpg" title="TA-3" class="profile-pic"/>
-      <p>Siddharth Awasthi </br><a href="mailto: f20180287@pilani.bits-pilani.ac.in">Contact</a> </p>
+      <div><p>Siddharth Awasthi </br><a href="mailto: f20180287@pilani.bits-pilani.ac.in">Contact</a> </p></div>
     </div>
     <div>
       <img src="Images/Jash_Shah.jpg" title="TA-4" class="profile-pic"/>
-      <p>Jash Shah </br><a href="mailto: f20180507@pilani.bits-pilani.ac.in">Contact</a> </p>
+      <div><p>Jash Shah </br><a href="mailto: f20180507@pilani.bits-pilani.ac.in">Contact</a> </p></div>
     </div>
     <div>
       <img src="Images/Snehil.jpg" title="TA-4" class="profile-pic"/>
-      <p>Snehil Gupta </br><a href="mailto: f20180112@pilani.bits-pilani.ac.in">Contact</a> </p>
+      <div><p>Snehil Gupta </br><a href="mailto: f20180112@pilani.bits-pilani.ac.in">Contact</a> </p>
+      </div>  
+      </div>
+    <div>
+      <img src="Images/Sumantrak.png" title="TA-5" class="profile-pic" />
+      <div><p>Sumantrak Mukherjee </br><a href="mailto: f20190413@pilani.bits-pilani.ac.in">Contact</a> </p></div>
     </div>
    
   </div>
+</div>
 
+
+<div style="display: flex; justify-content: center;">
 <div class="flex">
-  <div>
-    <img src="Images/Sumantrak.png" title="TA-5" class="profile-pic" />
-    <p>Sumantrak Mukherjee </br><a href="mailto: f20190413@pilani.bits-pilani.ac.in">Contact</a> </p>
-  </div>
+  
   <div>
     <img src="Images/Preetika.png" title="TA-6" class="profile-pic"/>
-    <p>Preetika Verma </br><a href="mailto: f20190088@pilani.bits-pilani.ac.in">Contact</a> </p>
+    <div><p>Preetika Verma </br><a href="mailto: f20190088@pilani.bits-pilani.ac.in">Contact</a> </p></div>
   </div>
   <div>
     <img src="" title="TA-7" class="profile-pic"/>
-    <p>Devaansh Gupta</br><a href="mailto: f20190187@pilani.bits-pilani.ac.in">Contact</a> </p>
+<div><p>Devaansh Gupta</br><a href="mailto: f20190187@pilani.bits-pilani.ac.in">Contact</a> </p></div>
   </div>
   <div>
     <img src="Images/Kanishk.jpg" title="TA-8" class="profile-pic"/>
-    <p>Kanishk Sharma </br><a href="mailto: f20190230@pilani.bits-pilani.ac.in">Contact</a> </p>
+    <div><p>Kanishk Sharma </br><a href="mailto: f20190230@pilani.bits-pilani.ac.in">Contact</a> </p></div>
   </div>
   <div>
     <img src="Images/Sarthak-1.jpg" title="TA-8" class="profile-pic"/>
-    <p>Sarthak Gupta </br><a href="mailto: f20190464@pilani.bits-pilani.ac.in">Contact</a> </p>
+    <div><p>Sarthak Gupta </br><a href="mailto: f20190464@pilani.bits-pilani.ac.in">Contact</a> </p></div>
   </div>
+</div>
 </div>
 
 
-
-
-<h3>Website Maintained by</h3>
+</br>
+</br>
+<h3 class="page-title" style="text-align: center;">Website Maintained by</h3>
+<div style="display: flex; justify-content: center;">
 <div class="flex">
   <div>
     <img src="Images/developer-profile.jpg" title="developer" class="developer" />
-  </div>
+    <div><p>Atharva Ajit Patkhedkar<br><a href="mailto: f20190464@pilani.bits-pilani.ac.in">Contact</a></p></div>
 </div>
-<div>Atharva Ajit Patkhedkar<br><a href="mailto: f20190464@pilani.bits-pilani.ac.in">Contact</a></div>
+</div>
+</div>
 
-  
+
 </div>
 
     </div>
