--- a/syllabus.html
+++ b/syllabus.html
@@ -27,6 +27,13 @@
     .tab4 {
             tab-size: 8;
         }
+        div.scroll {
+        margin: 4px, 4px;
+        padding: 4px;
+        width: 300px;
+        overflow: auto;
+        white-space: nowrap;
+    }
   </style>
   <link rel="stylesheet" href="public/css/poole.css">
   <link rel="stylesheet" href="public/css/syntax.css">
