--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ img {
     <div class="content container">
       <div class="page">
   <h1 class="page-title">Home</h1>
-  <p class="message">
+  <p class="message" style = "width:24rem">
     This course aims to introduce basic concepts, mathematics, application of AI
     techniques mainly neural networks, fuzzy logic, expert systems, evolutionary algorithms in modeling, control, classification, clustering, prediction problems.
   </p>
