--- a/practicum.html
+++ b/practicum.html
@@ -87,10 +87,11 @@
   <p style = "text-align: center" class="message">
     Here, you can find all the information about upcoming assignments and workshops. The solutions for first three assignments will be released within a week after the deadline.
   </p>
-  <div class="scroll">
+  
   <div class="row">
     <div class="column">
         <h2>Assignments</h2>
+        <div class="scroll">
         <table>
           <thead>
             <tr>
@@ -157,12 +158,14 @@
         </table>
     </div>
     </div>
+    </div>
   </br>
 
-  <div class="scroll">
-
+  
+    <div class="row">
     <div class="column">
         <h2>Workshops</h2>
+        <div class="scroll">
         <table>
           <thead>
             <tr>
@@ -197,10 +200,11 @@
     </div>
   </div>
 </div>
+</div>
   
 </div>
 
-    </div>
+    
 
   </body>
 </html>
