Fix Scroll div width

--- a/practicum.html
+++ b/practicum.html
@@ -30,7 +30,7 @@
         div.scroll {
         margin: 4px, 4px;
         padding: 4px;
-        width: 300px;
+        width: auto;
         overflow: auto;
         white-space: nowrap;
     }
